# astrocytes_in_Cpp

./: CMakeLists.txt  README.md  main.cpp
src/: Model.cpp  Model.h
src/algorithm/: probabilities.cpp  probabilities.h  reactions.cpp  reactions.h
src/cfgsys/: FileIO.h
util/: Vector2.h  Vector3.h  Vector4.h  includes.h  numcpp.h
